fix grid gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -215,7 +215,7 @@ section {
   .skills-container ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1em;
+    grid-gap: 2em;
   }
   .portfolio {
     padding-top: 7em;
